# overpowered

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  gcal.py  main.py  pyproject.toml  requirements.txt  setup.py  test_gcal.py
.github/workflows/: build.yml
