[tool.poetry]
name = "overpowered"
version = "0.1.0"
description = ""
authors = ["Revan Sopher <rsopher@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
arrow = "^1.2.2"
python-dateutil = "^2.8.2"
google-api-python-client = "^2.45.0"
google-auth-oauthlib = "^0.5.1"
rumps = "^0.3.0"

[tool.poetry.dev-dependencies]
pyre-check = "^0.9.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
